--- a/hadoop02.cfg
+++ b/hadoop02.cfg
@@ -13,14 +13,14 @@ rootpw --iscrypted $1$WmKxrlR8$EoRKlhpInteg3CHkB69PT1
 # System authorization information
 auth  --useshadow  --passalgo=sha512
 # Use graphical install
-graphical
+text
 firstboot --disable
 # System keyboard
 keyboard dk
 # System language
 lang en_US
 # SELinux configuration
-selinux --disabled
+selinux --permissive
 # Installation logging level
 logging --level=info
 
@@ -28,21 +28,28 @@ logging --level=info
 timezone  Europe/Copenhagen
 
 # Network information
-network  --bootproto=static --device=ens192 --gateway=192.168.1.1 --ip=192.168.1.122 --nameserver=192.168.1.1,192.168.1.11 --netmask=255.255.255.0 --onboot=on --hostname=hadoop02.krobath.local
-#network  --bootproto=static --device=eth1 --ip=10.1.1.121 --netmask=255.255.255.0 --onboot=on
+network  --bootproto=static --device=ens192 --gateway=192.168.1.1 --ip=192.168.1.122 --netmask=255.255.255.0 --onboot=on
+network  --nameserver=192.168.1.57 --hostname=hadoop02.krobath.local
 
 # System bootloader configuration
 bootloader --location=mbr  --driveorder="sda"
 
 # Partition clearing information
-clearpart --all --drives=sda
+clearpart --all --drives=sda,sdb,sdc
 
-part /boot --fstype=ext4 --size=500
-part pv.008002 --grow --size=1
+part /boot --fstype=ext4 --size=500 --ondisk=sda
+part pv.pv_01 --grow --size=1 --ondisk=sda
+part pv.pv_02 --grow --size=1 --ondisk=sdb
+part pv.pv_03 --grow --size=1 --ondisk=sdc
 
-volgroup vg01 --pesize=4096 pv.008002
-logvol / --fstype=ext4 --name=lv_root --vgname=vg01 --grow --size=1024 --maxsize=30720
-logvol swap --name=lv_swap --vgname=vg01 --grow --size=4096 --maxsize=8192
+volgroup vg01 --pesize=4096 pv.pv_01
+volgroup vg02 --pesize=4096 pv.pv_02
+volgroup vg03 --pesize=4096 pv.pv_03
+
+logvol / --fstype=xfs --name=lv_root --vgname=vg01 --grow --size=1024 --maxsize=16384
+logvol swap --name=lv_swap --vgname=vg02 --grow --size=8182 --maxsize=8192
+logvol /data --fstype=xfs --name=lv_data --vgname=vg03 --grow --size=1024 --maxsize=51200
+
 
 %packages
 @base
@@ -60,8 +67,6 @@ logvol swap --name=lv_swap --vgname=vg01 --grow --size=4096 --maxsize=8192
 @x11
 @system-management
 lsscsi
-kernel-devel
-kernel-headers
 gcc
 nfs-utils
 ksh
@@ -74,7 +79,12 @@ dos2unix
 
 
 # Create hadoop user
-useradd -c "Hadoop Owner" -d /home/hadoop -m -p welcome1 hadoop
+useradd -c "Hadoop Owner" -d /home/hadoop -m hadoop
+
+# Set hadoop user password
+echo zaq12wsx | passwd --stdin hadoop
+ 
+chown hadoop:users /data
 
 
 # Disable Redhat 7 firewall
@@ -96,11 +106,24 @@ echo "# HDFS nodes" >> /etc/hosts
 echo "192.168.1.121	hadoop01.krobath.local	hadoop01" >> /etc/hosts
 echo "192.168.1.122	hadoop02.krobath.local	hadoop02" >> /etc/hosts
 echo "192.168.1.123	hadoop03.krobath.local	hadoop03" >> /etc/hosts
+echo "192.168.1.124	hadoop04.krobath.local	hadoop03" >> /etc/hosts
+echo "192.168.1.125	hadoop05.krobath.local	hadoop03" >> /etc/hosts
 
 
-#
-# Install Java
-#
-#rpm -Uvh /shared/Java/jdk-10.0.1_linux-x64_bin.rpm
+# Install and configure NTP
+yum install -y ntp
+service ntpd start
+chkconfig ntpd on
+
+# Set timezone
+timedatectl set-timezone Europe/Copenhagen
+
+# Install required UTF8 locale
+localedef -i en_US -f UTF-8 en_US.UTF-8
+
+
+# Add users to sudoers file
+echo "hadoop       ALL=(ALL)       ALL" >> /etc/sudoers
+
 
 %end
