--- a/infra04.cfg
+++ b/infra04.cfg
@@ -20,7 +20,7 @@ keyboard dk
 # System language
 lang en_US
 # SELinux configuration
-selinux --permissive
+selinux --disabled
 # Installation logging level
 logging --level=info
 
@@ -28,27 +28,22 @@ logging --level=info
 timezone  Europe/Copenhagen
 
 # Network information
-network  --bootproto=static --device=ens192 --gateway=192.168.1.1 --ip=192.168.1.121 --netmask=255.255.255.0 --onboot=on
-network  --nameserver=192.168.1.57 --hostname=hadoop01.krobath.local
+network  --bootproto=static --device=ens192 --gateway=192.168.1.1 --ip=192.168.1.60 --netmask=255.255.255.0 --onboot=on
+network  --nameserver=192.168.1.57 --hostname=infra04.krobath.local
 
 # System bootloader configuration
 bootloader --location=mbr  --driveorder="sda"
 
 # Partition clearing information
-clearpart --all --drives=sda,sdb,sdc
+clearpart --all --drives=sda
 
 part /boot --fstype=ext4 --size=500 --ondisk=sda
 part pv.pv_01 --grow --size=1 --ondisk=sda
-part pv.pv_02 --grow --size=1 --ondisk=sdb
-part pv.pv_03 --grow --size=1 --ondisk=sdc
 
 volgroup vg01 --pesize=4096 pv.pv_01
-volgroup vg02 --pesize=4096 pv.pv_02
-volgroup vg03 --pesize=4096 pv.pv_03
 
 logvol / --fstype=xfs --name=lv_root --vgname=vg01 --grow --size=1024 --maxsize=16384
-logvol swap --name=lv_swap --vgname=vg02 --grow --size=8182 --maxsize=8192
-logvol /data --fstype=xfs --name=lv_data --vgname=vg03 --grow --size=1024 --maxsize=51200
+logvol swap --name=lv_swap --vgname=vg01 --grow --size=4096 --maxsize=8192
 
 
 %packages
@@ -79,13 +74,11 @@ dos2unix
 
 
 # Create hadoop user
-useradd -c "Hadoop Owner" -d /home/hadoop -m hadoop
+useradd -c "Administrator" -d /home/admin -m admin
 
 # Set hadoop user password
-echo zaq12wsx | passwd --stdin hadoop
+echo zaq12wsx | passwd --stdin admin
  
-chown hadoop:users /data
-
 
 # Disable Redhat 7 firewall
 service firewalld stop
@@ -102,12 +95,11 @@ mount /shared
 # Update /etc/hosts
 echo "" >> /etc/hosts
 echo "## Added by Hadoop kickstart script - do not change!" >> /etc/hosts
-echo "# HDFS nodes" >> /etc/hosts
-echo "192.168.1.121	hadoop01.krobath.local	hadoop01" >> /etc/hosts
-echo "192.168.1.122	hadoop02.krobath.local	hadoop02" >> /etc/hosts
-echo "192.168.1.123	hadoop03.krobath.local	hadoop03" >> /etc/hosts
-echo "192.168.1.124	hadoop04.krobath.local	hadoop03" >> /etc/hosts
-echo "192.168.1.125	hadoop05.krobath.local	hadoop03" >> /etc/hosts
+echo "# Infrastrukture nodes" >> /etc/hosts
+echo "192.168.1.57	infra01.krobath.local	infra01" >> /etc/hosts
+echo "192.168.1.58	infra02.krobath.local	infra02" >> /etc/hosts
+echo "192.168.1.59	infra03.krobath.local	infra03" >> /etc/hosts
+echo "192.168.1.60	infra04.krobath.local	infra04" >> /etc/hosts
 
 
 # Install and configure NTP
@@ -123,7 +115,8 @@ localedef -i en_US -f UTF-8 en_US.UTF-8
 
 
 # Add users to sudoers file
-echo "hadoop       ALL=(ALL)       ALL" >> /etc/sudoers
+echo "admin       ALL=(ALL)       ALL" >> /etc/sudoers
 
+echo 'LC_ALL="en_US.UTF-8"' >> /etc/locale.conf
 
 %end
