--- a/docker05.cfg
+++ b/docker05.cfg
@@ -28,8 +28,10 @@ logging --level=info
 timezone  Europe/Copenhagen
 
 # Network information
-network  --bootproto=static --device=ens192 --gateway=192.168.1.1 --ip=192.168.1.121 --netmask=255.255.255.0 --onboot=on
-network  --nameserver=192.168.1.57 --hostname=hadoop01.krobath.local
+network  --bootproto=static --device=ens192 --gateway=192.168.1.1 --ip=192.168.1.95 --netmask=255.255.255.0 --onboot=on
+network  --bootproto=static --device=ens224 --gateway=192.168.101.1 --ip=192.168.101.95 --netmask=255.255.255.0 --onboot=on
+network  --bootproto=static --device=ens256 --gateway=192.168.102.1 --ip=192.168.102.95 --netmask=255.255.255.0 --onboot=on
+network  --nameserver=192.168.1.57 --hostname=docker05.krobath.local
 
 # System bootloader configuration
 bootloader --location=mbr  --driveorder="sda"
@@ -46,9 +48,9 @@ volgroup vg01 --pesize=4096 pv.pv_01
 volgroup vg02 --pesize=4096 pv.pv_02
 volgroup vg03 --pesize=4096 pv.pv_03
 
-logvol / --fstype=xfs --name=lv_root --vgname=vg01 --grow --size=1024 --maxsize=16384
+logvol / --fstype=xfs --name=lv_root --vgname=vg01 --grow --size=1024 --maxsize=29696
 logvol swap --name=lv_swap --vgname=vg02 --grow --size=8182 --maxsize=8192
-logvol /data --fstype=xfs --name=lv_data --vgname=vg03 --grow --size=1024 --maxsize=51200
+logvol /data --fstype=xfs --name=lv_data --vgname=vg03 --grow --size=1024 --maxsize=40960
 
 
 %packages
@@ -78,13 +80,11 @@ dos2unix
 %post
 
 
-# Create hadoop user
-useradd -c "Hadoop Owner" -d /home/hadoop -m hadoop
+# Install 12c preinstall
+#yum install -y oracle-database-server-12cR2-preinstall
 
-# Set hadoop user password
-echo zaq12wsx | passwd --stdin hadoop
- 
-chown hadoop:users /data
+# Set oracle user password
+# echo zaq12wsx | passwd --stdin oracle
 
 
 # Disable Redhat 7 firewall
@@ -99,15 +99,20 @@ echo "192.168.1.21:/volume2/shared       /shared   nfs     rsize=8192,wsize=8192
 mount /shared
 
 
-# Update /etc/hosts
-echo "" >> /etc/hosts
-echo "## Added by Hadoop kickstart script - do not change!" >> /etc/hosts
-echo "# HDFS nodes" >> /etc/hosts
-echo "192.168.1.121	hadoop01.krobath.local	hadoop01" >> /etc/hosts
-echo "192.168.1.122	hadoop02.krobath.local	hadoop02" >> /etc/hosts
-echo "192.168.1.123	hadoop03.krobath.local	hadoop03" >> /etc/hosts
-echo "192.168.1.124	hadoop04.krobath.local	hadoop03" >> /etc/hosts
-echo "192.168.1.125	hadoop05.krobath.local	hadoop03" >> /etc/hosts
+
+
+#
+# Install Java
+#
+#rpm -Uvh /shared/Java/jdk-10.0.1_linux-x64_bin.rpm
+
+#
+# Create partitions
+#
+#echo -e "o\nn\np\n1\n\n\nw" | fdisk /dev/sdd
+#echo -e "o\nn\np\n1\n\n\nw" | fdisk /dev/sde
+#echo -e "o\nn\np\n1\n\n\nw" | fdisk /dev/sdf
+#echo -e "o\nn\np\n1\n\n\nw" | fdisk /dev/sdg
 
 
 # Install and configure NTP
@@ -121,9 +126,34 @@ timedatectl set-timezone Europe/Copenhagen
 # Install required UTF8 locale
 localedef -i en_US -f UTF-8 en_US.UTF-8
 
+# Create required groups
+#groupadd -g 54321 oinstall
+#groupadd -g 54322 dba
+#groupadd -g 54323 oper
+#groupadd -g 54324 backupdba
+#groupadd -g 54325 dgdba
+#groupadd -g 54326 kmdba
+#groupadd -g 54327 asmdba
+#groupadd -g 54328 asmoper
+#groupadd -g 54329 asmadmin
+#groupadd -g 54330 oper
+
+# Create oracle user
+#useradd -u 54322 -g oinstall -G dba,asmdba oracle (Already created by installing oracle-database-server-12cR2-preinstall)
+#usermod -u 54322 -g oinstall -G dba,asmdba,oper oracle
+
+# Create grid user
+#useradd -u 54320 -g oinstall -G asmadmin,asmdba,asmoper grid
+
+# Set oracle user password
+#echo zaq12wsx | passwd --stdin oracle
+
+# Set grid user password
+#echo zaq12wsx | passwd --stdin grid
 
 # Add users to sudoers file
-echo "hadoop       ALL=(ALL)       ALL" >> /etc/sudoers
+#echo "oracle       ALL=(ALL)       ALL" >> /etc/sudoers
+#echo "grid       ALL=(ALL)       ALL" >> /etc/sudoers
 
 
 %end
